--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ alignment targets in advance.
 
 <h2>Links</h2>
 <ul>
-  <li><a href="cv.pdf">CV (PDF)</a></li>
+  <li><a href="CV.pdf">CV (PDF)</a></li>
   <li><a href="https://your-substack-url">Substack</a></li>
   <li><a href="mailto:you@email.com">Email</a></li>
 </ul>
