--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@ alignment targets in advance.
 <h2>Links</h2>
 <ul>
   <li><a href="CV.pdf">CV (PDF)</a></li>
-  <li><a href="https://your-substack-url">Substack</a></li>
-  <li><a href="mailto:you@email.com">Email</a></li>
+  <li><a href="https://uncommonwisdom.substack.com/">Substack</a></li>
+  <li><a href="mailto:nclarke431@gmail.com">Email</a></li>
 </ul>
 
 </body>
