--- a/index.html
+++ b/index.html
@@ -1,55 +1,122 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Nicholas Clarke</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="Nicholas Clarke, PhD — Independent researcher in AI alignment, moral discovery, and moral philosophy. Cambridge, UK." />
   <style>
     body {
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
-      max-width: 700px;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+      max-width: 760px;
       margin: 60px auto;
       padding: 0 20px;
-      line-height: 1.6;
+      line-height: 1.65;
       color: #111;
     }
-    h1 { font-size: 2em; margin-bottom: 0.2em; }
-    h2 { font-size: 1.2em; margin-top: 2em; }
-    a { color: #0057b8; text-decoration: none; }
-    a:hover { text-decoration: underline; }
+    h1 {
+      font-size: 2.1em;
+      margin-bottom: 0.2em;
+      letter-spacing: -0.02em;
+    }
+    h2 {
+      font-size: 1.2em;
+      margin-top: 2.2em;
+      margin-bottom: 0.6em;
+    }
+    p {
+      margin: 0.6em 0;
+    }
+    ul {
+      padding-left: 1.2em;
+      margin: 0.4em 0;
+    }
+    li {
+      margin: 0.4em 0;
+    }
+    a {
+      color: #0057b8;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+    .tagline {
+      color: #444;
+      margin-bottom: 1em;
+    }
+    .section-note {
+      color: #444;
+      font-size: 0.98em;
+    }
+    .divider {
+      height: 1px;
+      background: #e6e6e6;
+      margin: 2.5em 0;
+    }
+    footer {
+      margin-top: 2.5em;
+      color: #444;
+      font-size: 0.95em;
+    }
   </style>
 </head>
+
 <body>
 
 <h1>Nicholas Clarke</h1>
-<p><strong>PhD Philosopher · AI Alignment & Moral Discovery</strong></p>
-
-<p>
-I work on AI alignment, ethics, and long-term risk from a philosophical and
-behavioural-science perspective. My current research focuses on treating
-moral discovery and idealisation as an empirical problem, rather than assuming
-alignment targets in advance.
+<p class="tagline">
+  <strong>Independent Researcher</strong> — AI Alignment & Moral Philosophy<br />
+  Cambridge, UK
 </p>
 
-<h2>Current work</h2>
+<p>
+I work on AI alignment, ethics, and long-term risk from a philosophical and behavioural-science
+perspective. My central focus is a safety-first approach that treats
+<strong>moral discovery and value idealisation as an empirical problem</strong>,
+rather than assuming alignment targets in advance.
+</p>
+
+<p>
+I am particularly interested in how AI systems might help identify and converge on what humans
+would endorse under conditions of improved information, rational deliberation, and coherence —
+and what this implies for alignment, corrigibility, and institutional design.
+</p>
+
+<h2>Research focus</h2>
+<p class="section-note">
+AI alignment and safety; moral discovery and value idealisation; idealised human preferences as
+alignment targets; naturalistic moral theory (Goal Theory); epistemology and the theory of reasons
+under conditions of epistemic non-ideality.
+</p>
+
+<h2>Background & credentials</h2>
 <ul>
-  <li>AI-assisted discovery of idealised human desire (alignment research)</li>
-  <li>Meta-ethics and moral naturalism (Goal Theory)</li>
-  <li>Public writing on AI alignment and ethics</li>
+  <li>PhD in Philosophy, University of London (awarded with no corrections)</li>
+  <li>Independent researcher based in Cambridge</li>
+  <li>Former software developer and technical author</li>
+  <li>Current role: Reporting &amp; Information Analyst, University of Cambridge</li>
 </ul>
 
-<h2>Writing & research</h2>
-<ul>
-  <li><em>Beyond Behavioural Control: Idealised Human Desire as an Alignment Target</em> (submitted)</li>
-  <li>AI alignment essays on Substack</li>
-</ul>
+<p class="section-note">
+I have recently submitted an academic paper on alignment targets to <em>Minds and Machines</em>
+and write publicly about AI alignment and moral philosophy on Substack.
+</p>
 
-<h2>Links</h2>
+<h2>Current projects</h2>
 <ul>
-  <li><a href="CV.pdf">CV (PDF)</a></li>
-  <li><a href="https://uncommonwisdom.substack.com/">Substack</a></li>
-  <li><a href="mailto:nclarke431@gmail.com">Email</a></li>
-</ul>
-
-</body>
-</html>
+  <li>
+    <strong>AI-Assisted Discovery of Idealised Human Desire</strong><br />
+    A research programme reframing AI alignment as moral discovery rather than behavioural control,
+    with attention to robustness, manipulation, and deceptive alignment. I am currently applying
+    for pilot funding to support a 6–9 month exploratory phase.
+  </li>
+  <li>
+    <strong>Goal Theory (meta-ethics)</strong><br />
+    A naturalistic moral framework grounding normativity in idealised human desire and causal
+    structure, developed in my doctoral work and ongoing publications.
+  </li>
+  <li>
+    <strong>Epistemology &amp; reasons under non-ideal conditions</strong><br />
+    Independent work on non-factive operational accounts of reasons and knowledge suited to
+    deliberation under uncertainty and fallible
