Add links section to index.html

--- a/index.html
+++ b/index.html
@@ -120,3 +120,13 @@ and write publicly about AI alignment and moral philosophy on Substack.
     <strong>Epistemology &amp; reasons under non-ideal conditions</strong><br />
     Independent work on non-factive operational accounts of reasons and knowledge suited to
     deliberation under uncertainty and fallible
+
+<h2>Links</h2>
+<ul>
+  <li><a href="CV.pdf">CV (PDF)</a></li>
+  <li><a href="https://uncommonwisdom.substack.com/">Substack</a></li>
+  <li><a href="mailto:nclarke431@gmail.com">Email</a></li>
+</ul>
+
+</body>
+</html>    
