Refactor index.html for improved structure and clarity
Updated HTML content and fixed encoding issues.

--- a/index.html
+++ b/index.html
@@ -14,51 +14,17 @@
       line-height: 1.65;
       color: #111;
     }
-    h1 {
-      font-size: 2.1em;
-      margin-bottom: 0.2em;
-      letter-spacing: -0.02em;
-    }
-    h2 {
-      font-size: 1.2em;
-      margin-top: 2.2em;
-      margin-bottom: 0.6em;
-    }
-    p {
-      margin: 0.6em 0;
-    }
-    ul {
-      padding-left: 1.2em;
-      margin: 0.4em 0;
-    }
-    li {
-      margin: 0.4em 0;
-    }
-    a {
-      color: #0057b8;
-      text-decoration: none;
-    }
-    a:hover {
-      text-decoration: underline;
-    }
-    .tagline {
-      color: #444;
-      margin-bottom: 1em;
-    }
-    .section-note {
-      color: #444;
-      font-size: 0.98em;
-    }
-    .divider {
-      height: 1px;
-      background: #e6e6e6;
-      margin: 2.5em 0;
-    }
-    footer {
-      margin-top: 2.5em;
-      color: #444;
-      font-size: 0.95em;
-    }
+    h1 { font-size: 2.1em; margin-bottom: 0.2em; letter-spacing: -0.02em; }
+    h2 { font-size: 1.2em; margin-top: 2.2em; margin-bottom: 0.6em; }
+    p { margin: 0.6em 0; }
+    ul { padding-left: 1.2em; margin: 0.4em 0; }
+    li { margin: 0.4em 0; }
+    a { color: #0057b8; text-decoration: none; }
+    a:hover { text-decoration: underline; }
+    .tagline { color: #444; margin-bottom: 1em; }
+    .section-note { color: #444; font-size: 0.98em; }
+    .divider { height: 1px; background: #e6e6e6; margin: 2.5em 0; }
+    footer { margin-top: 2.5em; color: #444; font-size: 0.95em; }
   </style>
 </head>
 
@@ -66,7 +32,7 @@
 
 <h1>Nicholas Clarke</h1>
 <p class="tagline">
-  <strong>Independent Researcher</strong> — AI Alignment & Moral Philosophy<br />
+  <strong>Independent Researcher</strong> — AI Alignment &amp; Moral Philosophy<br />
   Cambridge, UK
 </p>
 
@@ -90,7 +56,7 @@ alignment targets; naturalistic moral theory (Goal Theory); epistemology and the
 under conditions of epistemic non-ideality.
 </p>
 
-<h2>Background & credentials</h2>
+<h2>Background &amp; credentials</h2>
 <ul>
   <li>PhD in Philosophy, University of London (awarded with no corrections)</li>
   <li>Independent researcher based in Cambridge</li>
@@ -112,21 +78,54 @@ and write publicly about AI alignment and moral philosophy on Substack.
     for pilot funding to support a 6–9 month exploratory phase.
   </li>
   <li>
-    <strong>Goal Theory (meta-ethics)</strong><br />
+    <strong>Goal Theory (metaethics)</strong><br />
     A naturalistic moral framework grounding normativity in idealised human desire and causal
     structure, developed in my doctoral work and ongoing publications.
   </li>
   <li>
     <strong>Epistemology &amp; reasons under non-ideal conditions</strong><br />
     Independent work on non-factive operational accounts of reasons and knowledge suited to
-    deliberation under uncertainty and fallible
+    deliberation under uncertainty and fallible cognition.
+  </li>
+  <li>
+    <strong>Public writing on AI &amp; ethics</strong><br />
+    Essays aimed at bridging analytic philosophy, AI safety, and real-world decision-making.
+  </li>
+</ul>
+
+<h2>Selected writing</h2>
+<ul>
+  <li><em>Beyond Behavioural Control: Idealised Human Desire as an Alignment Target in AI</em> — submitted to <em>Minds and Machines</em></li>
+  <li>Essays on AI alignment, ethics, and moral philosophy on Substack</li>
+</ul>
+
+<h2>Ways I’m open to engaging</h2>
+<ul>
+  <li>Informal conversations with researchers, labs, institutes, or policy groups</li>
+  <li>Feedback or discussion of my alignment research</li>
+  <li>Exploratory funding conversations for pilot-stage work</li>
+  <li>Short, scoped advisory or research briefs on AI risk, ethics, or governance</li>
+</ul>
+
+<p class="section-note">
+I am intentionally avoiding implied affiliations unless explicitly agreed.
+</p>
+
+<div class="divider"></div>
 
 <h2>Links</h2>
 <ul>
   <li><a href="CV.pdf">CV (PDF)</a></li>
-  <li><a href="https://uncommonwisdom.substack.com/">Substack</a></li>
+  <li><a href="https://uncommonwisdom.substack.com/" rel="noopener">Substack</a></li>
   <li><a href="mailto:nclarke431@gmail.com">Email</a></li>
 </ul>
 
+<footer>
+  <p>
+    If you’re reaching out, a short note with context (who you are, what you’re interested in, and what you’d like to discuss)
+    is ideal.
+  </p>
+</footer>
+
 </body>
-</html>    
+</html>
