Refactor sections in index.html for clarity
Updated the structure of the 'Selected writing' and 'Ways I’m open to engaging' sections for better readability and added new research programmes.

--- a/index.html
+++ b/index.html
@@ -95,21 +95,28 @@ and write publicly about AI alignment and moral philosophy on Substack.
 
 <h2>Selected writing</h2>
 <ul>
-  <li><em>Beyond Behavioural Control: Idealised Human Desire as an Alignment Target in AI</em> — submitted to <em>Minds and Machines</em></li>
+  <li>
+    <em>Beyond Behavioural Control: Idealised Human Desire as an Alignment Target in AI</em>
+    — submitted to <em>Minds and Machines</em>
+  </li>
   <li>Essays on AI alignment, ethics, and moral philosophy on Substack</li>
 </ul>
 
-<h2>Ways I’m open to engaging</h2>
+<h2>Selected research (programmes)</h2>
 <ul>
-  <li>Informal conversations with researchers, labs, institutes, or policy groups</li>
-  <li>Feedback or discussion of my alignment research</li>
-  <li>Exploratory funding conversations for pilot-stage work</li>
-  <li>Short, scoped advisory or research briefs on AI risk, ethics, or governance</li>
+  <li>
+    <strong>Goal Theory (moral philosophy)</strong> — a programme of academic work developing a naturalistic
+    framework for morality, with applications to moral disagreement, moral luck, non-identity, and metaethical semantics.
+  </li>
+  <li>
+    <strong>Epistemology &amp; reasons</strong> — independent work developing non-factive operational accounts of reasons
+    and knowledge suited to deliberation under epistemic uncertainty.
+  </li>
 </ul>
-
 <p class="section-note">
-I am intentionally avoiding implied affiliations unless explicitly agreed.
+  Drafts and working papers are available on request.
 </p>
+
 
 <div class="divider"></div>
 
