Enhance Substack link description in index.html
Updated the Substack link to include 'essays' for clarity.

--- a/index.html
+++ b/index.html
@@ -99,7 +99,10 @@ and write publicly about AI alignment and moral philosophy on Substack.
     <em>Beyond Behavioural Control: Idealised Human Desire as an Alignment Target in AI</em>
     — submitted to <em>Minds and Machines</em>
   </li>
-  <li>Essays on AI alignment, ethics, and moral philosophy on Substack</li>
+  <li>
+    Essays on AI alignment, ethics, and moral philosophy on
+    <a href="https://uncommonwisdom.substack.com/" rel="noopener">Substack</a>
+  </li>
 </ul>
 
 <h2>Selected research (programmes)</h2>
@@ -123,7 +126,7 @@ and write publicly about AI alignment and moral philosophy on Substack.
 <h2>Links</h2>
 <ul>
   <li><a href="CV.pdf">CV (PDF)</a></li>
-  <li><a href="https://uncommonwisdom.substack.com/" rel="noopener">Substack</a></li>
+  <li><a href="https://uncommonwisdom.substack.com/" rel="noopener">Substack (essays)</a></li>
   <li><a href="mailto:nclarke431@gmail.com">Email</a></li>
 </ul>
 
