Revise research section and add notes on outputs
Updated the section title and added notes for completed academic work.

--- a/index.html
+++ b/index.html
@@ -105,19 +105,27 @@ and write publicly about AI alignment and moral philosophy on Substack.
   </li>
 </ul>
 
-<h2>Selected research (programmes)</h2>
+<h2>Selected research (programmes & outputs)</h2>
 <ul>
   <li>
-    <strong>Goal Theory (moral philosophy)</strong> — a programme of academic work developing a naturalistic
-    framework for morality, with applications to moral disagreement, moral luck, non-identity, and metaethical semantics.
+    <strong>Goal Theory (moral philosophy)</strong> — a naturalistic framework for morality, with applications to moral
+    disagreement, moral luck, non-identity, and metaethical semantics.
+    <br />
+    <span class="section-note">
+      Multiple completed academic papers and submissions developed from this work.
+    </span>
   </li>
   <li>
     <strong>Epistemology &amp; reasons</strong> — independent work developing non-factive operational accounts of reasons
     and knowledge suited to deliberation under epistemic uncertainty.
+    <br />
+    <span class="section-note">
+      Several completed papers addressing factivity, operational knowledge, and practical reasoning.
+    </span>
   </li>
 </ul>
 <p class="section-note">
-  Drafts and working papers are available on request.
+  Drafts, preprints, and submission-ready manuscripts are available on request.
 </p>
 
 
