Update academic paper and research program description

--- a/index.html
+++ b/index.html
@@ -65,8 +65,9 @@ under conditions of epistemic non-ideality.
 </ul>
 
 <p class="section-note">
-I have recently submitted an academic paper on alignment targets to <em>Minds and Machines</em>
-and write publicly about AI alignment and moral philosophy on Substack.
+  I have an active academic research programme, with multiple completed and submitted papers across
+  AI alignment, moral theory, and epistemology, alongside public writing on AI alignment and moral
+  philosophy on <a href="https://uncommonwisdom.substack.com/" rel="noopener">Substack</a>.
 </p>
 
 <h2>Current projects</h2>
