Refine descriptions in research section of index.html

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ under conditions of epistemic non-ideality.
 <h2>Selected research (programmes & outputs)</h2>
 <ul>
   <li>
-    <strong>Goal Theory (moral philosophy)</strong> — a naturalistic framework for morality, with applications to moral
+    <strong>Goal Theory (moral philosophy)</strong> — a naturalistic moral framework, with applications to moral
     disagreement, moral luck, non-identity, and metaethical semantics.
     <br />
     <span class="section-note">
@@ -121,7 +121,7 @@ under conditions of epistemic non-ideality.
     and knowledge suited to deliberation under epistemic uncertainty.
     <br />
     <span class="section-note">
-      Several completed papers addressing factivity, operational knowledge, and practical reasoning.
+      Several completed papers addressing factivity, operational knowledge, and practical reasoning under uncertainty.
     </span>
   </li>
 </ul>
